@@ -15,19 +15,18 @@ import com.liferay.petra.process.ProcessExecutor;
 import com.liferay.petra.process.ProcessLog;
 import com.liferay.petra.string.StringBundler;
 import com.liferay.petra.string.StringPool;
-import com.liferay.portal.kernel.cluster.ClusterExecutor;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.util.HashMapBuilder;
+import com.liferay.portal.kernel.util.JavaDetector;
 import com.liferay.portal.kernel.util.ListUtil;
+import com.liferay.portal.kernel.util.OSDetector;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
 import com.liferay.portal.search.elasticsearch7.internal.configuration.ElasticsearchConfigurationWrapper;
-import com.liferay.portal.search.elasticsearch7.internal.connection.ElasticsearchInstancePaths;
-import com.liferay.portal.search.elasticsearch7.internal.connection.ElasticsearchInstanceSettingsBuilder;
-import com.liferay.portal.search.elasticsearch7.internal.connection.HttpPortRange;
-import com.liferay.portal.search.elasticsearch7.internal.index.constants.SidecarVersionConstants;
+import com.liferay.portal.search.elasticsearch7.internal.sidecar.constants.SidecarConstants;
 import com.liferay.portal.search.elasticsearch7.internal.util.ResourceUtil;
+import com.liferay.portal.util.PropsValues;
 
 import java.io.File;
 import java.io.IOException;
@@ -39,6 +38,7 @@ import java.net.URLClassLoader;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import java.security.CodeSource;
 import java.security.ProtectionDomain;
@@ -63,21 +63,15 @@ import org.objectweb.asm.Opcodes;
 public class Sidecar {
 
 	public Sidecar(
-		ClusterExecutor clusterExecutor,
 		ElasticsearchConfigurationWrapper elasticsearchConfigurationWrapper,
 		ElasticsearchInstancePaths elasticsearchInstancePaths,
-		ProcessExecutor processExecutor,
-		ProcessExecutorPaths processExecutorPaths,
-		SidecarManager sidecarManager) {
+		ProcessExecutor processExecutor, SidecarManager sidecarManager) {
 
-		_clusterExecutor = clusterExecutor;
 		_elasticsearchConfigurationWrapper = elasticsearchConfigurationWrapper;
 		_elasticsearchInstancePaths = elasticsearchInstancePaths;
 		_processExecutor = processExecutor;
-		_processExecutorPaths = processExecutorPaths;
 		_sidecarManager = sidecarManager;
 
-		_dataHomePath = elasticsearchInstancePaths.getDataPath();
 		_sidecarHomePath = elasticsearchInstancePaths.getHomePath();
 	}
 
@@ -105,8 +99,8 @@ public class Sidecar {
 		if (_log.isInfoEnabled()) {
 			_log.info(
 				StringBundler.concat(
-					"Sidecar Elasticsearch ", _getNodeName(), " started at ",
-					address));
+					"Sidecar Elasticsearch ", _getNodeVersion(),
+					StringPool.SPACE, _getNodeName(), " started at ", address));
 		}
 
 		_address = address;
@@ -223,6 +217,8 @@ public class Sidecar {
 			_getBootstrapClassPath()
 		).setEnvironment(
 			_getEnvironment()
+		).setJavaExecutable(
+			System.getProperty("java.home") + "/bin/java"
 		).setProcessLogConsumer(
 			this::_consumeProcessLog
 		).setReactClassLoader(
@@ -271,7 +267,7 @@ public class Sidecar {
 
 	private String _getBootstrapClassPath() {
 		return _createClasspath(
-			_processExecutorPaths.getLibPath(),
+			Paths.get(PropsValues.LIFERAY_SHIELDED_CONTAINER_LIB_PORTAL_DIR),
 			path -> _fileNameContains(path, "petra"));
 	}
 
@@ -289,7 +285,7 @@ public class Sidecar {
 
 	private Distribution _getElasticsearchDistribution() {
 		String versionNumber = ResourceUtil.getResourceAsString(
-			getClass(), SidecarVersionConstants.SIDECAR_VERSION_FILE_NAME);
+			getClass(), SidecarConstants.SIDECAR_VERSION_FILE_NAME);
 
 		if (versionNumber.equals(ElasticsearchDistribution.VERSION)) {
 			return new ElasticsearchDistribution();
@@ -375,11 +371,18 @@ public class Sidecar {
 		arguments.add("-Dfile.encoding=UTF-8");
 		arguments.add("-Djava.io.tmpdir=" + _sidecarTempDirPath);
 
+		if (JavaDetector.isJDK17() || JavaDetector.isJDK21()) {
+			arguments.add("-Djava.security.manager=allow");
+		}
+
 		arguments.add(
 			"-Djava.security.policy=" +
 				String.valueOf(_getSecurityPolicyURL(bundleURL)));
-
 		arguments.add("-Djna.nosys=true");
+
+		if (JavaDetector.isJDK21() && OSDetector.isLinux()) {
+			arguments.add("-XX:-UseContainerSupport");
+		}
 
 		return arguments;
 	}
@@ -454,14 +457,20 @@ public class Sidecar {
 			return nodeName;
 		}
 
-		return "liferay";
+		return "liferay_sidecar";
+	}
+
+	private String _getNodeVersion() {
+		return ResourceUtil.getResourceAsString(
+			getClass(), SidecarConstants.SIDECAR_VERSION_FILE_NAME);
 	}
 
 	private URL _getSecurityPolicyURL(URL bundleURL) {
 		try (URLClassLoader urlClassLoader = new URLClassLoader(
 				new URL[] {bundleURL})) {
 
-			return urlClassLoader.findResource("META-INF/sidecar.policy");
+			return urlClassLoader.findResource(
+				SidecarConstants.SIDECAR_POLICY_FILE_NAME);
 		}
 		catch (IOException ioException) {
 			throw new RuntimeException(ioException);
@@ -480,8 +489,6 @@ public class Sidecar {
 			_elasticsearchInstancePaths
 		).httpPortRange(
 			new HttpPortRange(_elasticsearchConfigurationWrapper)
-		).localBindInetAddressSupplier(
-			_clusterExecutor::getBindInetAddress
 		).nodeName(
 			_getNodeName()
 		).build();
@@ -587,14 +594,11 @@ public class Sidecar {
 	private static final Log _log = LogFactoryUtil.getLog(Sidecar.class);
 
 	private String _address;
-	private final ClusterExecutor _clusterExecutor;
-	private final Path _dataHomePath;
 	private final ElasticsearchConfigurationWrapper
 		_elasticsearchConfigurationWrapper;
 	private final ElasticsearchInstancePaths _elasticsearchInstancePaths;
 	private ProcessChannel<Serializable> _processChannel;
 	private final ProcessExecutor _processExecutor;
-	private final ProcessExecutorPaths _processExecutorPaths;
 	private FutureListener<Serializable> _restartFutureListener;
 	private final Path _sidecarHomePath;
 	private SidecarManager _sidecarManager;
